--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://bianbianzhu.github.io/combine-search",
+  "homepage": "https://bianbianzhu.github.io/combine-search/",
   "name": "combine-search",
   "version": "0.1.0",
   "private": true,
